# MemStrata

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  ci-constraints.txt  pyproject.toml
.github/workflows/: publish.yml  test.yml
browser-extension/: esbuild.config.js
browser-extension/src/: service_worker.ts
browser-extension/src/content/: universal_content_script.ts
browser-extension/src/content/engine/: StreamInterceptorBridge.ts  StreamWatcher.ts  TurnExtractor.ts  VelocityFlatlineDetector.ts  types.ts
browser-extension/src/content/shared/: DiffView.ts  RewriteEngine.ts  augmenter.ts  memory_layer_client.ts
browser-extension/src/interceptor/: fetch_interceptor.ts
browser-extension/src/options/: options.html  options.ts
browser-extension/src/popup/: popup.html  popup.ts
docs/: architecture.md  browser-extension.md  data-model.md  hard-rules.md  mcp-server.md  repository-split.md
memory_layer/cli/: cd_hook.py  ingest.py  main.py
memory_layer/config/: keychain.py
memory_layer/layer3/: _db.py  api_server.py  mcp_app.py  ollama_health.py  retrieval.py
memory_layer/layer3/baseline/: cohort.py
memory_layer/layer3/ingestion/: __init__.py  branch_switch.py  chunker.py  denylist.py  lifecycle.py  orchestrator.py  progress.py  resource_policy.py  watcher.py
memory_layer/layer3/pricing/: fx.py  lookup.py  openrouter_sync.py
memory_layer/workers/: embedding_worker.py
memstrata/: __init__.py
memstrata/cli/: ingest.py  main.py
memstrata/layer3/: api_server.py  retrieval.py
memstrata/workers/: embedding_worker.py
migrations/: 012_v5_4_chat_embeddings.sql  013_v5_2_a_code_chunks.sql
shared/: telemetry_schema.json
tests/: conftest.py  test_api_server.py  test_cd_hook_generation.py  test_cd_hook_idempotent.py  test_codebase_ingest.py  test_e2e_multi_session.py  test_keychain.py  test_mcp_server.py  test_ollama_health.py  test_phase_34_embedding.py  test_phase_34_retrieval.py  test_shutdown_endpoint.py  test_telemetry_edge_cases.py
tests/ingestion/: test_branch_switch.py  test_chunker.py  test_denylist.py  test_lifecycle.py  test_max_ram.py  test_orchestrator.py  test_progress.py  test_resource_policy.py  test_watcher.py
